# EssentialCpp

./: CMakeLists.txt
Chapter1/: Exercise1-5String.cpp  Exercise1-6Vector.cpp  Exercise1-7.cpp
Chapter2/: Exercise2-2.hpp
Chapter4/Exercises/: Exercise4-5.cpp
